<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <TextView
            style="?android:listSeparatorTextViewStyle"
            android:text="@string/paymentInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:id="@+id/scrollView1">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:paddingLeft="16dp">
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cardTypeVisa"
                        android:checked="false"/>
                <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                             android:id="@+id/cardTypeMastercard" android:checked="false"
                />
            </RadioGroup>
            <EditText
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/creditcard"
                    android:hint="@string/creditcardNumber"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>
            <EditText
                    android:inputType="textPostalAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/expireMonth"
                    android:id="@+id/expireMonth"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>
            <EditText
                    android:inputType="textPostalAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/expireYear"
                    android:id="@+id/expireYear"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>
            <EditText
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstName"
                    android:hint="@string/firstName"/>
            <EditText
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastName"
                    android:hint="@string/lastName"/>
            <Button
                    style="@style/RoboButton"
                    android:text="@string/placeOrder"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/placeOrder"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
